dust_grammar/DustGrammarParser.py
# Generated from DustGrammar.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class DustGrammarParser ( Parser ):

    grammarFileName = "DustGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'main'", "'print'", "'println'", "'{'", 
                     "'}'", "'int'", "'bool'", "'set'", "'if'", "'else'", 
                     "'else if'", "'for'", "'while'", "'return'", "'fn'", 
                     "'let'", "'true'", "'false'", "'in'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'('", "')'", "'['", "']'", 
                     "':'", "'->'", "';'", "','", "'+'", "'-'", "'*'", "'/'", 
                     "'^'", "'='", "'..'", "'!'", "'=='", "'!='", "'<'", 
                     "'>'", "'<='", "'>='", "'&'", "'|'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "BEGIN", "END", "INT", "BOOL", "SET", "IF", "ELSE", 
                      "ELSEIF", "FOR", "WHILE", "RETURN", "FN", "LET", "TRUE", 
                      "FALSE", "IN", "ID", "NUMBER", "WS", "LPAREN", "RPAREN", 
                      "LBRACKET", "RBRACKET", "COLON", "ARROW", "SEMICOLON", 
                      "COMMA", "PLUS", "MINUS", "MULTIPLY", "DIVIDE", "POW", 
                      "ASSIGN", "RANGE", "NEGATION", "EQUAL", "NON_EQUAL", 
                      "LESS", "GREATER", "LESS_OR_EQUAL", "GREATER_OR_EQUAL", 
                      "AND", "OR" ]

    RULE_program = 0
    RULE_type = 1
    RULE_literal = 2
    RULE_set = 3
    RULE_atom = 4
    RULE_range = 5
    RULE_main_fn = 6
    RULE_expr = 7
    RULE_stmt = 8
    RULE_assign = 9
    RULE_unary_logical = 10
    RULE_binary_logical = 11
    RULE_binary_math = 12
    RULE_unary_math = 13
    RULE_var_decl = 14
    RULE_if_stmt = 15
    RULE_elif_stmt = 16
    RULE_else_stmt = 17
    RULE_for_stmt = 18
    RULE_while_stmt = 19
    RULE_fn_call = 20
    RULE_fn_param = 21
    RULE_fn_decl = 22
    RULE_return = 23
    RULE_print_fn = 24
    RULE_println_fn = 25

    ruleNames =  [ "program", "type", "literal", "set", "atom", "range", 
                   "main_fn", "expr", "stmt", "assign", "unary_logical", 
                   "binary_logical", "binary_math", "unary_math", "var_decl", 
                   "if_stmt", "elif_stmt", "else_stmt", "for_stmt", "while_stmt", 
                   "fn_call", "fn_param", "fn_decl", "return", "print_fn", 
                   "println_fn" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    BEGIN=4
    END=5
    INT=6
    BOOL=7
    SET=8
    IF=9
    ELSE=10
    ELSEIF=11
    FOR=12
    WHILE=13
    RETURN=14
    FN=15
    LET=16
    TRUE=17
    FALSE=18
    IN=19
    ID=20
    NUMBER=21
    WS=22
    LPAREN=23
    RPAREN=24
    LBRACKET=25
    RBRACKET=26
    COLON=27
    ARROW=28
    SEMICOLON=29
    COMMA=30
    PLUS=31
    MINUS=32
    MULTIPLY=33
    DIVIDE=34
    POW=35
    ASSIGN=36
    RANGE=37
    NEGATION=38
    EQUAL=39
    NON_EQUAL=40
    LESS=41
    GREATER=42
    LESS_OR_EQUAL=43
    GREATER_OR_EQUAL=44
    AND=45
    OR=46

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def main_fn(self):
            return self.getTypedRuleContext(DustGrammarParser.Main_fnContext,0)


        def EOF(self):
            return self.getToken(DustGrammarParser.EOF, 0)

        def fn_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DustGrammarParser.Fn_declContext)
            else:
                return self.getTypedRuleContext(DustGrammarParser.Fn_declContext,i)


        def getRuleIndex(self):
            return DustGrammarParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = DustGrammarParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 52
                    self.fn_decl() 
                self.state = 57
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 58
            self.main_fn()
            self.state = 59
            self.match(DustGrammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(DustGrammarParser.INT, 0)

        def BOOL(self):
            return self.getToken(DustGrammarParser.BOOL, 0)

        def SET(self):
            return self.getToken(DustGrammarParser.SET, 0)

        def getRuleIndex(self):
            return DustGrammarParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = DustGrammarParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 448) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(DustGrammarParser.NUMBER, 0)

        def TRUE(self):
            return self.getToken(DustGrammarParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(DustGrammarParser.FALSE, 0)

        def getRuleIndex(self):
            return DustGrammarParser.RULE_literal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiteral" ):
                listener.enterLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiteral" ):
                listener.exitLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteral" ):
                return visitor.visitLiteral(self)
            else:
                return visitor.visitChildren(self)




    def literal(self):

        localctx = DustGrammarParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_literal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 2490368) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACKET(self):
            return self.getToken(DustGrammarParser.LBRACKET, 0)

        def RBRACKET(self):
            return self.getToken(DustGrammarParser.RBRACKET, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DustGrammarParser.ExprContext)
            else:
                return self.getTypedRuleContext(DustGrammarParser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(DustGrammarParser.COMMA)
            else:
                return self.getToken(DustGrammarParser.COMMA, i)

        def getRuleIndex(self):
            return DustGrammarParser.RULE_set

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSet" ):
                listener.enterSet(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSet" ):
                listener.exitSet(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSet" ):
                return visitor.visitSet(self)
            else:
                return visitor.visitChildren(self)




    def set_(self):

        localctx = DustGrammarParser.SetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_set)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(DustGrammarParser.LBRACKET)
            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 279218356224) != 0):
                self.state = 66
                self.expr(0)
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==30:
                    self.state = 67
                    self.match(DustGrammarParser.COMMA)
                    self.state = 68
                    self.expr(0)
                    self.state = 73
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 76
            self.match(DustGrammarParser.RBRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DustGrammarParser.ID, 0)

        def literal(self):
            return self.getTypedRuleContext(DustGrammarParser.LiteralContext,0)


        def getRuleIndex(self):
            return DustGrammarParser.RULE_atom

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom" ):
                listener.enterAtom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtom" ):
                listener.exitAtom(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtom" ):
                return visitor.visitAtom(self)
            else:
                return visitor.visitChildren(self)




    def atom(self):

        localctx = DustGrammarParser.AtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_atom)
        try:
            self.state = 80
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [20]:
                self.enterOuterAlt(localctx, 1)
                self.state = 78
                self.match(DustGrammarParser.ID)
                pass
            elif token in [17, 18, 21]:
                self.enterOuterAlt(localctx, 2)
                self.state = 79
                self.literal()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RangeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DustGrammarParser.ExprContext)
            else:
                return self.getTypedRuleContext(DustGrammarParser.ExprContext,i)


        def RANGE(self):
            return self.getToken(DustGrammarParser.RANGE, 0)

        def getRuleIndex(self):
            return DustGrammarParser.RULE_range

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRange" ):
                listener.enterRange(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRange" ):
                listener.exitRange(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRange" ):
                return visitor.visitRange(self)
            else:
                return visitor.visitChildren(self)




    def range_(self):

        localctx = DustGrammarParser.RangeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_range)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.expr(0)
            self.state = 83
            self.match(DustGrammarParser.RANGE)
            self.state = 84
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Main_fnContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FN(self):
            return self.getToken(DustGrammarParser.FN, 0)

        def LPAREN(self):
            return self.getToken(DustGrammarParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(DustGrammarParser.RPAREN, 0)

        def BEGIN(self):
            return self.getToken(DustGrammarParser.BEGIN, 0)

        def END(self):
            return self.getToken(DustGrammarParser.END, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DustGrammarParser.StmtContext)
            else:
                return self.getTypedRuleContext(DustGrammarParser.StmtContext,i)


        def getRuleIndex(self):
            return DustGrammarParser.RULE_main_fn

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain_fn" ):
                listener.enterMain_fn(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain_fn" ):
                listener.exitMain_fn(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMain_fn" ):
                return visitor.visitMain_fn(self)
            else:
                return visitor.visitChildren(self)




    def main_fn(self):

        localctx = DustGrammarParser.Main_fnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_main_fn)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(DustGrammarParser.FN)
            self.state = 87
            self.match(DustGrammarParser.T__0)
            self.state = 88
            self.match(DustGrammarParser.LPAREN)
            self.state = 89
            self.match(DustGrammarParser.RPAREN)
            self.state = 90
            self.match(DustGrammarParser.BEGIN)
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 279755321868) != 0):
                self.state = 91
                self.stmt()
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 97
            self.match(DustGrammarParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atom(self):
            return self.getTypedRuleContext(DustGrammarParser.AtomContext,0)


        def set_(self):
            return self.getTypedRuleContext(DustGrammarParser.SetContext,0)


        def fn_call(self):
            return self.getTypedRuleContext(DustGrammarParser.Fn_callContext,0)


        def unary_math(self):
            return self.getTypedRuleContext(DustGrammarParser.Unary_mathContext,0)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DustGrammarParser.ExprContext)
            else:
                return self.getTypedRuleContext(DustGrammarParser.ExprContext,i)


        def unary_logical(self):
            return self.getTypedRuleContext(DustGrammarParser.Unary_logicalContext,0)


        def LPAREN(self):
            return self.getToken(DustGrammarParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(DustGrammarParser.RPAREN, 0)

        def binary_math(self):
            return self.getTypedRuleContext(DustGrammarParser.Binary_mathContext,0)


        def binary_logical(self):
            return self.getTypedRuleContext(DustGrammarParser.Binary_logicalContext,0)


        def getRuleIndex(self):
            return DustGrammarParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = DustGrammarParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 100
                self.atom()
                pass

            elif la_ == 2:
                self.state = 101
                self.set_()
                pass

            elif la_ == 3:
                self.state = 102
                self.fn_call()
                pass

            elif la_ == 4:
                self.state = 103
                self.unary_math()
                self.state = 104
                self.expr(5)
                pass

            elif la_ == 5:
                self.state = 106
                self.unary_logical()
                self.state = 107
                self.expr(3)
                pass

            elif la_ == 6:
                self.state = 109
                self.match(DustGrammarParser.LPAREN)
                self.state = 110
                self.expr(0)
                self.state = 111
                self.match(DustGrammarParser.RPAREN)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 125
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 123
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                    if la_ == 1:
                        localctx = DustGrammarParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 115
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 116
                        self.binary_math()
                        self.state = 117
                        self.expr(5)
                        pass

                    elif la_ == 2:
                        localctx = DustGrammarParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 119
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 120
                        self.binary_logical()
                        self.state = 121
                        self.expr(3)
                        pass

             
                self.state = 127
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(DustGrammarParser.ExprContext,0)


        def SEMICOLON(self):
            return self.getToken(DustGrammarParser.SEMICOLON, 0)

        def assign(self):
            return self.getTypedRuleContext(DustGrammarParser.AssignContext,0)


        def var_decl(self):
            return self.getTypedRuleContext(DustGrammarParser.Var_declContext,0)


        def return_(self):
            return self.getTypedRuleContext(DustGrammarParser.ReturnContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(DustGrammarParser.If_stmtContext,0)


        def for_stmt(self):
            return self.getTypedRuleContext(DustGrammarParser.For_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(DustGrammarParser.While_stmtContext,0)


        def print_fn(self):
            return self.getTypedRuleContext(DustGrammarParser.Print_fnContext,0)


        def println_fn(self):
            return self.getTypedRuleContext(DustGrammarParser.Println_fnContext,0)


        def getRuleIndex(self):
            return DustGrammarParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = DustGrammarParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_stmt)
        try:
            self.state = 146
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 128
                self.expr(0)
                self.state = 129
                self.match(DustGrammarParser.SEMICOLON)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 131
                self.assign()
                self.state = 132
                self.match(DustGrammarParser.SEMICOLON)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 134
                self.var_decl()
                self.state = 135
                self.match(DustGrammarParser.SEMICOLON)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 137
                self.return_()
                self.state = 138
                self.match(DustGrammarParser.SEMICOLON)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 140
                self.if_stmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 141
                self.for_stmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 142
                self.while_stmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 143
                self.print_fn()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 144
                self.println_fn()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 145
                self.match(DustGrammarParser.SEMICOLON)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(DustGrammarParser.ID)
            else:
                return self.getToken(DustGrammarParser.ID, i)

        def ASSIGN(self):
            return self.getToken(DustGrammarParser.ASSIGN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DustGrammarParser.ExprContext)
            else:
                return self.getTypedRuleContext(DustGrammarParser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(DustGrammarParser.COMMA)
            else:
                return self.getToken(DustGrammarParser.COMMA, i)

        def getRuleIndex(self):
            return DustGrammarParser.RULE_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign" ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)




    def assign(self):

        localctx = DustGrammarParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_assign)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(DustGrammarParser.ID)
            self.state = 153
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==30:
                self.state = 149
                self.match(DustGrammarParser.COMMA)
                self.state = 150
                self.match(DustGrammarParser.ID)
                self.state = 155
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 156
            self.match(DustGrammarParser.ASSIGN)
            self.state = 157
            self.expr(0)
            self.state = 162
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==30:
                self.state = 158
                self.match(DustGrammarParser.COMMA)
                self.state = 159
                self.expr(0)
                self.state = 164
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Unary_logicalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEGATION(self):
            return self.getToken(DustGrammarParser.NEGATION, 0)

        def getRuleIndex(self):
            return DustGrammarParser.RULE_unary_logical

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnary_logical" ):
                listener.enterUnary_logical(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnary_logical" ):
                listener.exitUnary_logical(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnary_logical" ):
                return visitor.visitUnary_logical(self)
            else:
                return visitor.visitChildren(self)




    def unary_logical(self):

        localctx = DustGrammarParser.Unary_logicalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_unary_logical)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.match(DustGrammarParser.NEGATION)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Binary_logicalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQUAL(self):
            return self.getToken(DustGrammarParser.EQUAL, 0)

        def NON_EQUAL(self):
            return self.getToken(DustGrammarParser.NON_EQUAL, 0)

        def LESS(self):
            return self.getToken(DustGrammarParser.LESS, 0)

        def GREATER(self):
            return self.getToken(DustGrammarParser.GREATER, 0)

        def LESS_OR_EQUAL(self):
            return self.getToken(DustGrammarParser.LESS_OR_EQUAL, 0)

        def GREATER_OR_EQUAL(self):
            return self.getToken(DustGrammarParser.GREATER_OR_EQUAL, 0)

        def AND(self):
            return self.getToken(DustGrammarParser.AND, 0)

        def OR(self):
            return self.getToken(DustGrammarParser.OR, 0)

        def getRuleIndex(self):
            return DustGrammarParser.RULE_binary_logical
